--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       </div>
       <!-- <div id="header3">3D PRESENTATION</div> -->
       <div id="header3">3D ПРЕЗЕНТАЦИЯ</div>
-      <div id="header2">3dfine@mail.ru<br>3dfinecom@gmail.com<br>8 917 889 87 71</div>
+      <div id="header2">3dfine@mail.ru<br>3dfinecom@gmail.com<br>ayrat_3d.artstation.com</div>
     </div>
 
     <div class="overlay" style = "display: none">
