--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
       </div>
     </div>
 
-    <div id = "copyRight" >&copy A.E. Zaripov, 2020</div>
+    <div id = "copyRight" >&copy A.E. Zaripov, 2019-2021</div>
     <div id="WebGLInfo">
       WebGL (Web Graphics Library) - технология, предназначенная для визуализации интерактивной 3D и 2D графики
         в браузере без использования плагинов.
